--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <html>
 <head>
 	<title>Atinja o objetivo</title>
-<link rel="stylesheet" href="style.css">
-<script src="fabric.js"></script>
+<link rel="stylesheet" href="Style.css">
+<script src="Fabric.js"></script>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
@@ -21,6 +21,6 @@
 		<!--- Crie o canvas--->
         <canvas width="1100" height="500" id="myCanvas"></canvas>
 	</center>
-	<script src="main.js"></script>
+	<script src="Main.js"></script>
 </body>
 </html>
